Função lista buracos negros e remove-os a partir da lista

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ActListarSistemasDeUmaGalaxia"
-            android:theme="@style/AppTheme.NoActionBar">></activity>
+        <activity android:name=".ActBuracoNegro"></activity>
+        <activity android:name=".ActListarBuracosNegros" />
+        <activity
+            android:name=".ActListarSistemasDeUmaGalaxia"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".ActSatelite"
             android:label="@string/title_activity_act_satelite"
